--- a/p8105_hw2_sz2957.Rmd
+++ b/p8105_hw2_sz2957.Rmd
@@ -39,7 +39,7 @@ The following code chunk selects station name and line, and then uses `distinct(
 ```{r}
 trans_ent %>% 
   select(station_name, line) %>% 
-  distinct
+  distinct()
 ```
 
 The next code chunk is similar, but filters according to ADA compliance as an initial step. This produces a dataframe in which the number of rows is the number of ADA compliant stations. 
@@ -83,6 +83,71 @@ trans_ent %>%
 ```
 
 ### Problem 2
+
+Read and Clean the Mr.Trash Wheel sheet:
+```{r}
+# Load the data file, without the picture in the first row and numerical sums in the last row(that do not include dumpster-specific data)
+Mr_Trash_wheel = 
+  read_excel("./data/Trash Wheel Collection Data.xlsx",sheet = 1, range = "A2:N549") %>% 
+# clean names
+  janitor::clean_names() %>% 
+# round the number of sports balls to the nearest integer and converts the result to an interger variable; Add a new variable indicate this is from Mr. Trash wheel: Convert year into num variable
+  mutate(
+      sports_balls_inte = as.integer(sports_balls),
+      Trash_wheel = "Mr. Trash wheel",
+      year = as.numeric(year)
+    )
+# Demonstrate the table
+  Mr_Trash_wheel 
+```
+
+Read and clean the Professor Trash Wheel sheet:
+```{r}
+# Load the data file, without the picture in the first row and numerical sums in the last row(that do not include dumpster-specific data)
+Pro_Trash_wheel = 
+  read_excel("./data/Trash Wheel Collection Data.xlsx",sheet = 2, range = "A2:M96") %>% 
+# clean names
+  janitor::clean_names() %>% 
+# round the number of sports balls to the nearest integer and converts the result to an interger variable; Add a new variable indicate this is from Mr. Trash wheel
+  mutate(
+      Trash_wheel = "Professor Trash wheel"
+    )
+# Demonstrate the table
+  Pro_Trash_wheel
+```
+
+Combine two trash wheel sheet. Since there is a huge difference between two dataset, we will choose full join method.
+
+```{r}
+# Join two dataset use full join
+Trash_wheel =
+  full_join(Mr_Trash_wheel, Pro_Trash_wheel) %>% 
+# Change the order of variables
+  select(dumpster, Trash_wheel, everything())
+# Demonstrate the table
+  Trash_wheel
+```
+
+Calculate some important data and results:
+```{r}
+# calculate the number of observations in the resulting dataset
+Trash_wheel %>% 
+  select(dumpster, Trash_wheel) %>% 
+  distinct
+# Describe the key variables
+  summary(Trash_wheel)
+# Total weight of trash collected by Professor Trash Wheel
+Trash_wheel %>% 
+  filter(Trash_wheel == "Professor Trash wheel") %>% 
+  pull(weight_tons) %>% 
+  mean()
+# Total number of sports balls collected by Mr.Trash Wheel in 2020
+Trash_wheel %>% 
+  filter(Trash_wheel == "Mr. Trash wheel", year == 2020) %>% 
+  pull(sports_balls_inte) %>% 
+  sum()
+```
+
 
 
 ### Problem 3
