--- a/p8105_hw2_sz2957.md
+++ b/p8105_hw2_sz2957.md
@@ -1,13 +1,14 @@
 Homework 2
 ================
 Suning Zhao
-2022-10-04
+2022-10-05
 
 ### Load Libraries
 
 ``` r
 library(tidyverse)
 library(readxl)
+library(lubridate)
 ```
 
 ### Problem 1 (The same as solution)
@@ -348,3 +349,256 @@ Trash_wheel %>%
 ```
 
 ### Problem 3
+
+Read and clean the data in pols-month.csv:
+
+``` r
+pols_month = 
+# read the pols-month.csv
+  read_csv("./data/fivethirtyeight_datasets/pols-month.csv")%>% 
+# clean the name of variables
+  janitor::clean_names() %>% 
+# separate to break up the variable mon into integer variables
+  separate(col = mon, into = c('year','month','day'), sep = "-" , convert = TRUE) %>% 
+  mutate(
+    # replace month number with month name;
+     month = month.abb[month],
+    # Create a president variable taking values gop and dem
+     president = recode(prez_dem, '0' = "gop", '1' = "dem")
+  ) %>% 
+# remove prez_dem, prez_gop and day
+  select(year, month, president, gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem)
+# demonstrate the table
+pols_month
+## # A tibble: 822 × 9
+##     year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem
+##    <int> <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>
+##  1  1947 Jan   dem            23      51     253      23      45     198
+##  2  1947 Feb   dem            23      51     253      23      45     198
+##  3  1947 Mar   dem            23      51     253      23      45     198
+##  4  1947 Apr   dem            23      51     253      23      45     198
+##  5  1947 May   dem            23      51     253      23      45     198
+##  6  1947 Jun   dem            23      51     253      23      45     198
+##  7  1947 Jul   dem            23      51     253      23      45     198
+##  8  1947 Aug   dem            23      51     253      23      45     198
+##  9  1947 Sep   dem            23      51     253      23      45     198
+## 10  1947 Oct   dem            23      51     253      23      45     198
+## # … with 812 more rows
+## # ℹ Use `print(n = ...)` to see more rows
+```
+
+Read and clean the data in snp.csv:
+
+``` r
+snp= 
+# read the snp.csv
+  read_csv("./data/fivethirtyeight_datasets/snp.csv")%>% 
+# clean the name of variables
+  janitor::clean_names() %>% 
+# rephrase date formate
+  mutate(
+     date_new = dmy(date)
+  ) %>%
+# separate to break up the variable mon into integer variables
+  separate(col = date_new, into = c('year','month','day'), sep = "-" , convert = TRUE) %>% 
+  mutate(
+    # replace month number with month name;
+     month = month.abb[month]
+  ) %>%   
+# remove prez_dem, prez_gop and day
+  select(year, month, close) %>% 
+# arrange according to year and month
+  arrange(year, month)
+# demonstrate the table
+snp
+## # A tibble: 787 × 3
+##     year month close
+##    <int> <chr> <dbl>
+##  1  1969 Feb    93.1
+##  2  1969 Feb    97.7
+##  3  1969 Feb   103. 
+##  4  1969 Jan    92.1
+##  5  1969 Jan    97.1
+##  6  1969 Jan    95.5
+##  7  1969 Jan    91.8
+##  8  1969 Jan   103. 
+##  9  1969 Jan   104. 
+## 10  1969 Mar    93.8
+## # … with 777 more rows
+## # ℹ Use `print(n = ...)` to see more rows
+```
+
+Read and clean the data in unemployment.csv:
+
+``` r
+unemployment= 
+# read the unemployment.csv
+  read_csv("./data/fivethirtyeight_datasets/unemployment.csv")%>% 
+# clean the name of variables
+  janitor::clean_names() %>% 
+# Change the dataset from wide to long
+  pivot_longer(
+    jan:dec,
+    names_to = "month",
+    values_to = "unemployment_rate"
+  ) %>% 
+  mutate(
+    # replace month number with month name;
+     month = str_to_title(month)
+  ) 
+    # demonstrate the table
+unemployment
+## # A tibble: 816 × 3
+##     year month unemployment_rate
+##    <dbl> <chr>             <dbl>
+##  1  1948 Jan                 3.4
+##  2  1948 Feb                 3.8
+##  3  1948 Mar                 4  
+##  4  1948 Apr                 3.9
+##  5  1948 May                 3.5
+##  6  1948 Jun                 3.6
+##  7  1948 Jul                 3.6
+##  8  1948 Aug                 3.9
+##  9  1948 Sep                 3.8
+## 10  1948 Oct                 3.7
+## # … with 806 more rows
+## # ℹ Use `print(n = ...)` to see more rows
+```
+
+Merge the datasets:
+
+``` r
+# Join two dataset use left join
+Five_Thirty_Eight =
+  left_join(pols_month, snp, by = c("year","month")) %>% 
+# Join the third dataset use left join
+  left_join(unemployment, by = c("year","month"))
+# Demonstrate the table
+  Five_Thirty_Eight
+## # A tibble: 1,226 × 11
+##     year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem close
+##    <dbl> <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <dbl>
+##  1  1947 Jan   dem            23      51     253      23      45     198    NA
+##  2  1947 Feb   dem            23      51     253      23      45     198    NA
+##  3  1947 Mar   dem            23      51     253      23      45     198    NA
+##  4  1947 Apr   dem            23      51     253      23      45     198    NA
+##  5  1947 May   dem            23      51     253      23      45     198    NA
+##  6  1947 Jun   dem            23      51     253      23      45     198    NA
+##  7  1947 Jul   dem            23      51     253      23      45     198    NA
+##  8  1947 Aug   dem            23      51     253      23      45     198    NA
+##  9  1947 Sep   dem            23      51     253      23      45     198    NA
+## 10  1947 Oct   dem            23      51     253      23      45     198    NA
+## # … with 1,216 more rows, and 1 more variable: unemployment_rate <dbl>
+## # ℹ Use `print(n = ...)` to see more rows, and `colnames()` to see all variable names
+```
+
+Calculate some important data and results:
+
+``` r
+# Describe pols_month
+head(pols_month)
+## # A tibble: 6 × 9
+##    year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem
+##   <int> <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl>
+## 1  1947 Jan   dem            23      51     253      23      45     198
+## 2  1947 Feb   dem            23      51     253      23      45     198
+## 3  1947 Mar   dem            23      51     253      23      45     198
+## 4  1947 Apr   dem            23      51     253      23      45     198
+## 5  1947 May   dem            23      51     253      23      45     198
+## 6  1947 Jun   dem            23      51     253      23      45     198
+summary(pols_month)
+##       year         month            president            gov_gop     
+##  Min.   :1947   Length:822         Length:822         Min.   :12.00  
+##  1st Qu.:1964   Class :character   Class :character   1st Qu.:18.00  
+##  Median :1981   Mode  :character   Mode  :character   Median :22.00  
+##  Mean   :1981                                         Mean   :22.48  
+##  3rd Qu.:1998                                         3rd Qu.:28.00  
+##  Max.   :2015                                         Max.   :34.00  
+##     sen_gop        rep_gop         gov_dem        sen_dem         rep_dem   
+##  Min.   :32.0   Min.   :141.0   Min.   :17.0   Min.   :44.00   Min.   :188  
+##  1st Qu.:42.0   1st Qu.:176.0   1st Qu.:22.0   1st Qu.:48.00   1st Qu.:211  
+##  Median :46.0   Median :195.0   Median :28.0   Median :53.00   Median :250  
+##  Mean   :46.1   Mean   :194.9   Mean   :27.2   Mean   :54.41   Mean   :245  
+##  3rd Qu.:51.0   3rd Qu.:222.0   3rd Qu.:32.0   3rd Qu.:58.00   3rd Qu.:268  
+##  Max.   :56.0   Max.   :253.0   Max.   :41.0   Max.   :71.00   Max.   :301
+
+# Describe snp
+head(snp)
+## # A tibble: 6 × 3
+##    year month close
+##   <int> <chr> <dbl>
+## 1  1969 Feb    93.1
+## 2  1969 Feb    97.7
+## 3  1969 Feb   103. 
+## 4  1969 Jan    92.1
+## 5  1969 Jan    97.1
+## 6  1969 Jan    95.5
+summary(snp)
+##       year         month               close        
+##  Min.   :1969   Length:787         Min.   :  17.05  
+##  1st Qu.:1985   Class :character   1st Qu.:  83.73  
+##  Median :2001   Mode  :character   Median : 138.53  
+##  Mean   :2011                      Mean   : 474.89  
+##  3rd Qu.:2052                      3rd Qu.: 941.79  
+##  Max.   :2068                      Max.   :2107.39
+
+# Describe unemployment
+head(unemployment)
+## # A tibble: 6 × 3
+##    year month unemployment_rate
+##   <dbl> <chr>             <dbl>
+## 1  1948 Jan                 3.4
+## 2  1948 Feb                 3.8
+## 3  1948 Mar                 4  
+## 4  1948 Apr                 3.9
+## 5  1948 May                 3.5
+## 6  1948 Jun                 3.6
+summary(unemployment)
+##       year         month           unemployment_rate
+##  Min.   :1948   Length:816         Min.   : 2.50    
+##  1st Qu.:1965   Class :character   1st Qu.: 4.70    
+##  Median :1982   Mode  :character   Median : 5.60    
+##  Mean   :1982                      Mean   : 5.83    
+##  3rd Qu.:1998                      3rd Qu.: 6.90    
+##  Max.   :2015                      Max.   :10.80    
+##                                    NA's   :6
+
+# Describe Five_Thirty_Eight
+head(Five_Thirty_Eight)
+## # A tibble: 6 × 11
+##    year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem close
+##   <dbl> <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <dbl>
+## 1  1947 Jan   dem            23      51     253      23      45     198    NA
+## 2  1947 Feb   dem            23      51     253      23      45     198    NA
+## 3  1947 Mar   dem            23      51     253      23      45     198    NA
+## 4  1947 Apr   dem            23      51     253      23      45     198    NA
+## 5  1947 May   dem            23      51     253      23      45     198    NA
+## 6  1947 Jun   dem            23      51     253      23      45     198    NA
+## # … with 1 more variable: unemployment_rate <dbl>
+## # ℹ Use `colnames()` to see all variable names
+summary(Five_Thirty_Eight)
+##       year         month            president            gov_gop     
+##  Min.   :1947   Length:1226        Length:1226        Min.   :12.00  
+##  1st Qu.:1971   Class :character   Class :character   1st Qu.:18.00  
+##  Median :1985   Mode  :character   Mode  :character   Median :22.00  
+##  Mean   :1984                                         Mean   :22.78  
+##  3rd Qu.:2000                                         3rd Qu.:29.00  
+##  Max.   :2015                                         Max.   :34.00  
+##                                                                      
+##     sen_gop        rep_gop         gov_dem         sen_dem         rep_dem     
+##  Min.   :32.0   Min.   :141.0   Min.   :17.00   Min.   :44.00   Min.   :188.0  
+##  1st Qu.:43.0   1st Qu.:176.0   1st Qu.:22.00   1st Qu.:48.00   1st Qu.:210.0  
+##  Median :46.0   Median :195.0   Median :28.00   Median :53.00   Median :250.0  
+##  Mean   :46.6   Mean   :195.4   Mean   :27.03   Mean   :53.77   Mean   :243.5  
+##  3rd Qu.:53.0   3rd Qu.:223.0   3rd Qu.:32.00   3rd Qu.:58.00   3rd Qu.:264.0  
+##  Max.   :56.0   Max.   :253.0   Max.   :41.00   Max.   :71.00   Max.   :301.0  
+##                                                                                
+##      close         unemployment_rate
+##  Min.   :  63.54   Min.   : 2.500   
+##  1st Qu.: 115.14   1st Qu.: 4.900   
+##  Median : 414.03   Median : 5.700   
+##  Mean   : 645.91   Mean   : 5.985   
+##  3rd Qu.:1147.73   3rd Qu.: 7.200   
+##  Max.   :2107.39   Max.   :10.800   
+##  NA's   :667       NA's   :12
+```
