--- a/p8105_hw2_sz2957.md
+++ b/p8105_hw2_sz2957.md
@@ -350,25 +350,29 @@ Trash_wheel %>%
 
 ### Problem 3
 
-Read and clean the data in pols-month.csv:
+###### Read and clean the data in pols-month.csv
+
+Below is the process to read and clean the data in `pols-month.csv`:
+
+-   The process begins with data import and updating variable names.
+-   Then, I Use `separate()` to break up the variable `mon` into integer
+    variables `year`,`month`, and `day`.
+-   In the next `mutate()` step, I use `month.abb` to replace month
+    number with abbreviated month name and create a `president` variable
+    taking values `gop` and `dem` using `recode()`.
+-   In `select()` step, I remove `prez_dem` and `prez_gop` and `day`
+    variable and choose other variables.
 
 ``` r
 pols_month = 
-# read the pols-month.csv
-  read_csv("./data/fivethirtyeight_datasets/pols-month.csv")%>% 
-# clean the name of variables
+  read_csv("./data/fivethirtyeight_datasets/pols-month.csv")%>%
   janitor::clean_names() %>% 
-# separate to break up the variable mon into integer variables
   separate(col = mon, into = c('year','month','day'), sep = "-" , convert = TRUE) %>% 
   mutate(
-    # replace month number with month name;
      month = month.abb[month],
-    # Create a president variable taking values gop and dem
      president = recode(prez_dem, '0' = "gop", '1' = "dem")
   ) %>% 
-# remove prez_dem, prez_gop and day
   select(year, month, president, gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, rep_dem)
-# demonstrate the table
 pols_month
 ## # A tibble: 822 × 9
 ##     year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem
@@ -387,66 +391,77 @@ pols_month
 ## # ℹ Use `print(n = ...)` to see more rows
 ```
 
-Read and clean the data in snp.csv:
+###### Read and clean the data in snp.csv
+
+Below is the process to read and clean the data in `snp.csv`:
+
+-   The process begins with data import and updating variable names.
+-   Then, I Use `parse_date_time2()` in `lubridate()` to convert the
+    date format to yyyy-mm-dd. This step is used for a uniform format of
+    `month` variable for future merge.
+-   After converting the date format, I use `separate()` to break up the
+    variable `mon` into integer variables `year`,`month`, and `day`.
+-   In the next `mutate()` step, I use `month.abb` to replace month
+    number with abbreviated month name.
+-   In `select()` step, I only keep `year` and `month` and `close`
+    variables, with `year` and `month` as leading columns and use
+    `arrange()` step to arrange the order according to year and month.
 
 ``` r
 snp= 
-# read the snp.csv
   read_csv("./data/fivethirtyeight_datasets/snp.csv")%>% 
-# clean the name of variables
   janitor::clean_names() %>% 
-# rephrase date formate
   mutate(
-     date_new = dmy(date)
+     date_new = parse_date_time2(date, orders="mdy", cutoff_2000 = 23)
   ) %>%
-# separate to break up the variable mon into integer variables
   separate(col = date_new, into = c('year','month','day'), sep = "-" , convert = TRUE) %>% 
   mutate(
-    # replace month number with month name;
      month = month.abb[month]
   ) %>%   
-# remove prez_dem, prez_gop and day
   select(year, month, close) %>% 
-# arrange according to year and month
   arrange(year, month)
-# demonstrate the table
 snp
 ## # A tibble: 787 × 3
 ##     year month close
 ##    <int> <chr> <dbl>
-##  1  1969 Feb    93.1
-##  2  1969 Feb    97.7
-##  3  1969 Feb   103. 
-##  4  1969 Jan    92.1
-##  5  1969 Jan    97.1
-##  6  1969 Jan    95.5
-##  7  1969 Jan    91.8
-##  8  1969 Jan   103. 
-##  9  1969 Jan   104. 
-## 10  1969 Mar    93.8
+##  1  1950 Apr    18.0
+##  2  1950 Aug    18.4
+##  3  1950 Dec    20.4
+##  4  1950 Feb    17.2
+##  5  1950 Jan    17.0
+##  6  1950 Jul    17.8
+##  7  1950 Jun    17.7
+##  8  1950 Mar    17.3
+##  9  1950 May    18.8
+## 10  1950 Nov    19.5
 ## # … with 777 more rows
 ## # ℹ Use `print(n = ...)` to see more rows
 ```
 
-Read and clean the data in unemployment.csv:
+###### Read and clean the data in unemployment.csv
+
+Below is the process to read and clean the data in `unemployment.csv`:
+
+-   The process begins with data import and updating variable names.
+-   Then, I Use `pivot_longer()` to switch the table from “wide” to
+    “long” format, Making the original columns as `month`, and the
+    values to `unemployment_rate`.
+-   After switching the table, I use `str_to_title()` to make the words
+    in `month` as “Jan”. This is to make sure we can combine three
+    datasets.
 
 ``` r
 unemployment= 
-# read the unemployment.csv
   read_csv("./data/fivethirtyeight_datasets/unemployment.csv")%>% 
-# clean the name of variables
   janitor::clean_names() %>% 
-# Change the dataset from wide to long
   pivot_longer(
     jan:dec,
     names_to = "month",
     values_to = "unemployment_rate"
   ) %>% 
   mutate(
-    # replace month number with month name;
      month = str_to_title(month)
   ) 
-    # demonstrate the table
 unemployment
 ## # A tibble: 816 × 3
 ##     year month unemployment_rate
@@ -465,17 +480,14 @@ unemployment
 ## # ℹ Use `print(n = ...)` to see more rows
 ```
 
-Merge the datasets:
+###### Merge three datasets use `left_join()`
 
 ``` r
-# Join two dataset use left join
 Five_Thirty_Eight =
   left_join(pols_month, snp, by = c("year","month")) %>% 
-# Join the third dataset use left join
   left_join(unemployment, by = c("year","month"))
-# Demonstrate the table
   Five_Thirty_Eight
-## # A tibble: 1,226 × 11
+## # A tibble: 822 × 11
 ##     year month president gov_gop sen_gop rep_gop gov_dem sen_dem rep_dem close
 ##    <dbl> <chr> <chr>       <dbl>   <dbl>   <dbl>   <dbl>   <dbl>   <dbl> <dbl>
 ##  1  1947 Jan   dem            23      51     253      23      45     198    NA
@@ -488,11 +500,11 @@ Five_Thirty_Eight =
 ##  8  1947 Aug   dem            23      51     253      23      45     198    NA
 ##  9  1947 Sep   dem            23      51     253      23      45     198    NA
 ## 10  1947 Oct   dem            23      51     253      23      45     198    NA
-## # … with 1,216 more rows, and 1 more variable: unemployment_rate <dbl>
+## # … with 812 more rows, and 1 more variable: unemployment_rate <dbl>
 ## # ℹ Use `print(n = ...)` to see more rows, and `colnames()` to see all variable names
 ```
 
-Calculate some important data and results:
+###### Calculate some important data and results:
 
 ``` r
 # Describe pols_month
@@ -527,20 +539,20 @@ head(snp)
 ## # A tibble: 6 × 3
 ##    year month close
 ##   <int> <chr> <dbl>
-## 1  1969 Feb    93.1
-## 2  1969 Feb    97.7
-## 3  1969 Feb   103. 
-## 4  1969 Jan    92.1
-## 5  1969 Jan    97.1
-## 6  1969 Jan    95.5
+## 1  1950 Apr    18.0
+## 2  1950 Aug    18.4
+## 3  1950 Dec    20.4
+## 4  1950 Feb    17.2
+## 5  1950 Jan    17.0
+## 6  1950 Jul    17.8
 summary(snp)
 ##       year         month               close        
-##  Min.   :1969   Length:787         Min.   :  17.05  
-##  1st Qu.:1985   Class :character   1st Qu.:  83.73  
-##  Median :2001   Mode  :character   Median : 138.53  
-##  Mean   :2011                      Mean   : 474.89  
-##  3rd Qu.:2052                      3rd Qu.: 941.79  
-##  Max.   :2068                      Max.   :2107.39
+##  Min.   :1950   Length:787         Min.   :  17.05  
+##  1st Qu.:1966   Class :character   1st Qu.:  83.73  
+##  Median :1982   Mode  :character   Median : 138.53  
+##  Mean   :1982                      Mean   : 474.89  
+##  3rd Qu.:1999                      3rd Qu.: 941.79  
+##  Max.   :2015                      Max.   :2107.39
 
 # Describe unemployment
 head(unemployment)
@@ -578,27 +590,44 @@ head(Five_Thirty_Eight)
 ## # ℹ Use `colnames()` to see all variable names
 summary(Five_Thirty_Eight)
 ##       year         month            president            gov_gop     
-##  Min.   :1947   Length:1226        Length:1226        Min.   :12.00  
-##  1st Qu.:1971   Class :character   Class :character   1st Qu.:18.00  
-##  Median :1985   Mode  :character   Mode  :character   Median :22.00  
-##  Mean   :1984                                         Mean   :22.78  
-##  3rd Qu.:2000                                         3rd Qu.:29.00  
+##  Min.   :1947   Length:822         Length:822         Min.   :12.00  
+##  1st Qu.:1964   Class :character   Class :character   1st Qu.:18.00  
+##  Median :1981   Mode  :character   Mode  :character   Median :22.00  
+##  Mean   :1981                                         Mean   :22.48  
+##  3rd Qu.:1998                                         3rd Qu.:28.00  
 ##  Max.   :2015                                         Max.   :34.00  
 ##                                                                      
-##     sen_gop        rep_gop         gov_dem         sen_dem         rep_dem     
-##  Min.   :32.0   Min.   :141.0   Min.   :17.00   Min.   :44.00   Min.   :188.0  
-##  1st Qu.:43.0   1st Qu.:176.0   1st Qu.:22.00   1st Qu.:48.00   1st Qu.:210.0  
-##  Median :46.0   Median :195.0   Median :28.00   Median :53.00   Median :250.0  
-##  Mean   :46.6   Mean   :195.4   Mean   :27.03   Mean   :53.77   Mean   :243.5  
-##  3rd Qu.:53.0   3rd Qu.:223.0   3rd Qu.:32.00   3rd Qu.:58.00   3rd Qu.:264.0  
-##  Max.   :56.0   Max.   :253.0   Max.   :41.00   Max.   :71.00   Max.   :301.0  
-##                                                                                
+##     sen_gop        rep_gop         gov_dem        sen_dem         rep_dem   
+##  Min.   :32.0   Min.   :141.0   Min.   :17.0   Min.   :44.00   Min.   :188  
+##  1st Qu.:42.0   1st Qu.:176.0   1st Qu.:22.0   1st Qu.:48.00   1st Qu.:211  
+##  Median :46.0   Median :195.0   Median :28.0   Median :53.00   Median :250  
+##  Mean   :46.1   Mean   :194.9   Mean   :27.2   Mean   :54.41   Mean   :245  
+##  3rd Qu.:51.0   3rd Qu.:222.0   3rd Qu.:32.0   3rd Qu.:58.00   3rd Qu.:268  
+##  Max.   :56.0   Max.   :253.0   Max.   :41.0   Max.   :71.00   Max.   :301  
+##                                                                             
 ##      close         unemployment_rate
-##  Min.   :  63.54   Min.   : 2.500   
-##  1st Qu.: 115.14   1st Qu.: 4.900   
-##  Median : 414.03   Median : 5.700   
-##  Mean   : 645.91   Mean   : 5.985   
-##  3rd Qu.:1147.73   3rd Qu.: 7.200   
-##  Max.   :2107.39   Max.   :10.800   
-##  NA's   :667       NA's   :12
+##  Min.   :  17.05   Min.   : 2.50    
+##  1st Qu.:  83.67   1st Qu.: 4.70    
+##  Median : 137.26   Median : 5.60    
+##  Mean   : 472.85   Mean   : 5.83    
+##  3rd Qu.: 932.06   3rd Qu.: 6.90    
+##  Max.   :2107.39   Max.   :10.80    
+##  NA's   :36        NA's   :12
 ```
+
+-   The dataset `pols_month` contains 822 observations and 9 with the
+    names year, month, president, gov_gop, sen_gop, rep_gop, gov_dem,
+    sen_dem, rep_dem. The year ranges from 1947, 2015.
+
+-   The dataset `snp` contains 787 observations and 3 with the names
+    year, month, close. The year ranges from 1950, 2015.
+
+-   The dataset `unemployment` contains 816 observations and 3 with the
+    names year, month, unemployment_rate. The year ranges from 1948,
+    2015.
+
+-   The merged dataset `Five_Thirty_Eight`, which is a merged dataset of
+    three datasets above, contains 822 observations and 11 with the
+    names year, month, president, gov_gop, sen_gop, rep_gop, gov_dem,
+    sen_dem, rep_dem, close, unemployment_rate. The year ranges from
+    1947, 2015.
